support schemeURI for names. datacite/bolognese#56
