# app/controllers/dois_controller.rb
@@ -478,9 +478,9 @@ class DoisController < ApplicationController
       :should_validate,
       :client,
       :creators,
-      { creators: [:nameType, { nameIdentifiers: [:nameIdentifier, :nameIdentifierScheme] }, :name, :givenName, :familyName, :affiliation] },
+      { creators: [:nameType, { nameIdentifiers: [:nameIdentifier, :nameIdentifierScheme, :schemeUri] }, :name, :givenName, :familyName, :affiliation] },
       :contributors,
-      { contributors: [:nameType, { nameIdentifiers: [:nameIdentifier, :nameIdentifierScheme] }, :name, :givenName, :familyName, :affiliation, :contributorType] },
+      { contributors: [:nameType, { nameIdentifiers: [:nameIdentifier, :nameIdentifierScheme, :schemeUri] }, :name, :givenName, :familyName, :affiliation, :contributorType] },
       :identifiers,
       { identifiers: [:identifier, :identifierType] },
       :relatedIdentifiers,
