# app/models/activity.rb
@@ -34,7 +34,8 @@ class Activity < Audited::Audit
         nameType: { type: :keyword },
         nameIdentifiers: { type: :object, properties: {
           nameIdentifier: { type: :keyword },
-          nameIdentifierScheme: { type: :keyword }
+          nameIdentifierScheme: { type: :keyword },
+          schemeUri: { type: :keyword }
         }},
         name: { type: :text },
         givenName: { type: :text },
@@ -45,7 +46,8 @@ class Activity < Audited::Audit
         nameType: { type: :keyword },
         nameIdentifiers: { type: :object, properties: {
           nameIdentifier: { type: :keyword },
-          nameIdentifierScheme: { type: :keyword }
+          nameIdentifierScheme: { type: :keyword },
+          schemeUri: { type: :keyword }
         }},
         name: { type: :text },
         givenName: { type: :text },
