# app/models/doi.rb
@@ -105,7 +105,8 @@ class Doi < ActiveRecord::Base
       nameType: { type: :keyword },
       nameIdentifiers: { type: :object, properties: {
         nameIdentifier: { type: :keyword },
-        nameIdentifierScheme: { type: :keyword }
+        nameIdentifierScheme: { type: :keyword },
+        schemeUri: { type: :keyword }
       }},
       name: { type: :text },
       givenName: { type: :text },
@@ -116,7 +117,8 @@ class Doi < ActiveRecord::Base
       nameType: { type: :keyword },
       nameIdentifiers: { type: :object, properties: {
         nameIdentifier: { type: :keyword },
-        nameIdentifierScheme: { type: :keyword }
+        nameIdentifierScheme: { type: :keyword },
+        schemeUri: { type: :keyword }
       }},
       name: { type: :text },
       givenName: { type: :text },
